# instagirl-v2.5

./: .dockerignore  BUILD.bazel  Dockerfile  MODULE.bazel  start.sh
.github/workflows/: docker-image.yml
