load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "comfyui_image",
    base = "ubuntu:22.04",
    files = ["Dockerfile", "start.sh"],   # Dockerfile и скрипт запуска
    entrypoint = ["/start.sh"],
)

load("@io_bazel_rules_docker//container/push.bzl", "oci_push")

oci_push(
    name = "push_comfyui_image",
    image = ":comfyui_image",
    repository = "index.docker.io/roblodev/comfyui-instagirl-v2.5",
    remote_tags = ["latest"],
)
